<resources>
    <string name="app_name">ShareYouSport</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_creation">Creation</string>
    <!-- Liste des sports-->
    <string name="Football">Football</string>
    <string name="Rugby">Rugby</string>
    <string name="Basketball">Basketball</string>
    <string name="Tennis">Tennis</string>
    <string name="Badminton">Badminton</string>
    <string name="Volley_ball">Volley-ball</string>
    <string name="Handball">Handball</string>
    <string name="Course">Course à pied</string>
    <string name="Cyclisme">Cyclisme</string>
    <!-- fin Liste des sports-->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="social">Login with</string>
    <string name="title_activity_profil">Profil</string>
    <string name="title_activity_parametre_utilisateur">parametre_utilisateur</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_signup">Signup</string>
    <string name="title_activity_maps">Map</string>
    <string name="info_window_participants">Participants</string>
    <string name="info_window_equipments">Need equipements</string>
    <string name="info_window_gps">Coordonnées GPS</string>
    <string name="info_window_address">Adresse à récupérer via script</string>
    <string name="info_window_participantsNumber">Nombre de participant à récupérer</string>
    <string name="info_window_equipmentsInfo">Equipement à récupérer</string>
    <string name="info_window_gpsCoordonate">coordonnées</string>
</resources>
