<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <!-- //AJOUTER SANS TEST -->
        <TextView
            android:id="@+id/sport_practice"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:textStyle="bold"
            />


    <TextView
        android:id="@+id/participants"
        android:text="@string/info_window_participants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12dp"
        android:textStyle="bold"/>

        <TextView
            android:id="@+id/participants_number"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            />


    <TextView
        android:id="@+id/equipments"
        android:text="@string/info_window_equipments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12dp"
        android:textStyle="bold"/>

        <TextView
            android:id="@+id/equipments_info"
            android:text="@string/info_window_equipmentsInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            />


    <TextView
        android:id="@+id/gps"
        android:text="@string/info_window_gps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12dp"
        android:textStyle="bold"/>

        <TextView
            android:id="@+id/gps_coordonate"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            />
</LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/localName"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/address"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            />

        <TextView
            android:id="@+id/city"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            />

       <!-- a mettre en place quand la récupération de l'heure sera au bon format
       <TextView
            android:id="@+id/hour"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            /> -->

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/button_join"
            />

    </LinearLayout>

</LinearLayout>
