<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.max.sharemysport.Login"
    android:background="#2b2949"
    android:orientation="vertical">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false"
        android:background="#2b2949">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1"
            android:gravity="center_horizontal"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/logo"
                />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                >

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:background="#ffffff"

                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                >

                <EditText
                    android:id="@+id/password"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:background="#ffffff"
                    />

            </android.support.design.widget.TextInputLayout>

            <!-- <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold" /> -->

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="210dp"
                android:layout_height="90dp"
                android:background="@drawable/sign_in"
                android:textAlignment="center"
                />

            <TextView
                android:text="@string/social"
                android:textColor="#FFFFFF"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                >


                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/facebook"/>


                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/twitter"

                    />

                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/google_plus"

                    />






            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                >


                <RadioButton
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="Keep me logged in"
                    android:textColor="#FFFFFF"
                    android:id="@+id/radioButton" />

                <Button

                    android:layout_width="160dp"
                    android:layout_height="100dp"
                    android:background="@drawable/forget"

                    />

            </LinearLayout>


        </LinearLayout>





    </ScrollView>

</LinearLayout>
